fix horizontal scroll, update home hero video

--- a/source/assets/styles/component/_hero.scss
+++ b/source/assets/styles/component/_hero.scss
@@ -8,10 +8,6 @@
 	z-index: 1000;
 }
 
-.section__introduction {
-	overflow: hidden;
-}
-
 .overlay {
 	background: radial-gradient(transparent 0%, #000 90%);
 	position: absolute;
