--- a/source/assets/styles/global/_reset-custom.scss
+++ b/source/assets/styles/global/_reset-custom.scss
@@ -17,6 +17,10 @@ body {
 	}
 }
 
+main {
+	overflow: hidden;
+}
+
 hr {
 	border: solid 2px $white;
 	border-radius: 0;
